--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http": "0.0.1-security",
     "mongoose": "^5.9.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-emoji": "^0.5.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-scroll-to-bottom": "^1.3.2",
     "redux": "^4.0.5",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "uuid": "^7.0.3"
   },
   "scripts": {
