--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "3.4.1",
     "react-scroll-to-bottom": "^1.3.2",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "uuid": "^7.0.3"
