--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server":"cd backend && node server.js",
+    "socketio":"cd socketserver && node index.js",
+    "everything":"npm run start & (cd socketserver && node index.js) & (cd backend && node server.js) ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
