--- a/backend/package.json
+++ b/backend/package.json
@@ -35,13 +35,14 @@
     "uuid": "^7.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "server":"cd backend && node server.js",
-    "socketio":"cd socketserver && node index.js",
-    "everything":"npm run start & (cd socketserver && node index.js) & (cd backend && node server.js) ",
+    "start": "node server.js",
+    "server": "cd backend && node server.js",
+    "socketio": "cd socketserver && node index.js",
+    "everything": "npm run start & (cd socketserver && node index.js) & (cd backend && node server.js) ",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm install && npm run build"     
   },
   "eslintConfig": {
     "extends": "react-app"
