--- a/backend/package.json
+++ b/backend/package.json
@@ -35,14 +35,14 @@
     "uuid": "^7.0.3"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "npm install && node server.js",
     "server": "cd backend && node server.js",
     "socketio": "cd socketserver && node index.js",
     "everything": "npm run start & (cd socketserver && node index.js) & (cd backend && node server.js) ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run build"     
+    "heroku-postbuild": "npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
