--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -36,6 +37,7 @@
   },
   "scripts": {
     "start": "npm install && node server.js",
+    "temp": "react-scripts start",
     "server": "cd backend && node server.js",
     "socketio": "cd socketserver && node index.js",
     "everything": "npm run start & (cd socketserver && node index.js) & (cd backend && node server.js) ",
