--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "clsx": "^1.1.1",
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
